--- a/style.css
+++ b/style.css
@@ -2,4 +2,6 @@ body {
     margin: 0;
     padding: 0;
     background-image: url("images/inbox_practice.gif");
+    background-repeat: no-repeat;
+    background-size: cover;
 }
